stockMsaActivity/src/main/java/com/example/stockmsaactivity/common/error/ResponseCode.java
package com.example.stockmsaactivity.common.error;

public interface ResponseCode {
    String SUCCESS = "SU";
    String VALIDATION_FAIL = "VF";

    String CERTIFICATION_FAIL = "CF";
    String DATABASE_ERROR = "DBE";

    String INTERNAL_ERROR = "IE";
}
